cluster/apps/gitea/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-deployment
spec:
  selector:
    matchLabels:
      app: httpbin
  replicas: 2
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest@sha256:599fe5e5073102dbb0ee3dbb65f049dab44fa9fc251f6835c9990f8fb196a72b
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: gitea-data
