cluster/apps/gitea/templates/t.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pv-pod
spec:
  volumes:
    - name: test-pv-storage
      persistentVolumeClaim:
        claimName: data-gitea-0
  containers:
    - name: test-pv-container
      image: nginx@sha256:480868e8c8c797794257e2abd88d0f9a8809b2fe956cbfbc05dcc0bca1f7cd43
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: /data
          name: test-pv-storage
