cluster/apps/gitea/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-wave: "-1"
  name: gitea
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`git.<secret:private-domain>`)
      priority: 10
      services:
        - name: gitea-http
